# ha-adaptive-climate

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  hacs.json  pyproject.toml
custom_components/adaptive_climate/: __init__.py  central_controller.py  climate.py  climate_control.py  climate_handlers.py  climate_init.py  climate_setup.py  const.py  coordinator.py  manifest.json  number.py  protocols.py  sensor.py  services.yaml
custom_components/adaptive_climate/adaptive/: __init__.py  auto_apply.py  confidence.py  confidence_contribution.py  contact_sensors.py  cycle_analysis.py  cycle_weight.py  disturbance_detector.py  floor_physics.py  heating_rate_learner.py  humidity_detector.py  ke_learning.py  learner_serialization.py  learning.py  manifold_registry.py  night_setback.py  persistence.py  physics.py  pid_rules.py  preheat.py  pwm_tuning.py  robust_stats.py  sun_position.py  thermal_groups.py  thermal_rates.py  undershoot_detector.py  vacation.py  validation.py
custom_components/adaptive_climate/analytics/: __init__.py  charts.py  energy.py  health.py  heat_output.py  history_store.py  reports.py
custom_components/adaptive_climate/helpers/: __init__.py  hvac_mode.py  registry.py
custom_components/adaptive_climate/managers/: __init__.py  auto_mode_switching.py  comfort_degradation.py  control_output.py  cycle_metrics.py  cycle_tracker.py  events.py  heat_pipeline.py  heater_controller.py  ke_manager.py  learning_gate.py  learning_milestone.py  night_setback_calculator.py  night_setback_manager.py  notification_manager.py  pid_gains_manager.py  pid_tuning.py  pwm_controller.py  setpoint_boost.py  state_attributes.py  state_restorer.py  status_manager.py  temperature_manager.py
custom_components/adaptive_climate/pid_controller/: __init__.py
custom_components/adaptive_climate/sensors/: __init__.py  actuator_wear.py  comfort.py  energy.py  health.py  performance.py
custom_components/adaptive_climate/services/: __init__.py  scheduled.py
custom_components/adaptive_climate/solar/: __init__.py  solar_gain.py
custom_components/adaptive_thermostat/: __init__.py  climate.py  climate_control.py  climate_init.py  climate_setup.py  const.py  coordinator.py  manifest.json  services.yaml
custom_components/adaptive_thermostat/adaptive/: chronic_approach_detector.py  humidity_detector.py  learner_serialization.py  learning.py  undershoot_detector.py
custom_components/adaptive_thermostat/managers/: __init__.py  auto_mode_switching.py  ke_manager.py  pid_gains_manager.py  pid_tuning.py  state_attributes.py  state_restorer.py
docs/architecture/: manager-communication.md
docs/plans/: 2026-02-01-state-attributes-refactor-impl.md  2026-02-01-state-attributes-refactor.md  2026-02-01-valve-actuation-time-design.md  2026-02-01-valve-actuation-time-impl.md  2026-02-01-weighted-cycle-learning-design.md  2026-02-01-weighted-cycle-learning-impl.md  2026-02-02-fix-weighted-learning-design.md  2026-02-02-heating-rate-learner-design.md  2026-02-02-heating-rate-learner-impl.md  2026-02-06-test-strategy-rebalance-design.md  2026-02-07-reporting-facelift-design.md  2026-02-07-reporting-facelift-plan.md  2026-02-07-ruff-pyright-setup.md  2026-02-07-shared-outdoor-temp-design.md  2026-02-07-shared-outdoor-temp-plan.md  2026-02-19-multi-pwm-cycle-aggregation-design.md  2026-02-21-learning-simplification-design.md  2026-02-21-learning-simplification-impl.md
tests/: conftest.py  test_actuator_wear.py  test_adaptive_convergence.py  test_adaptive_pid.py  test_auto_apply.py  test_auto_learning_setback.py  test_auto_mode_switching.py  test_central_controller.py  test_charts.py  test_chronic_approach_detector.py  test_chronic_approach_historic_scan.py  test_chronic_approach_integration.py  test_climate.py  test_climate_init.py  test_climate_pid_gains.py  test_climate_preheat.py  test_climate_setup.py  test_comfort_degradation.py  test_comfort_sensors.py  test_confidence_contribution.py  test_confidence_tiers.py  test_conftest_fixtures.py  test_const.py  test_const_preheat.py  test_contact_sensors.py  test_control_output.py  test_convergence_thresholds.py  test_coordinator.py  test_cross_feature_interactions.py  test_cycle_analysis.py  test_cycle_events_final.py  test_cycle_metrics.py  test_cycle_tracker.py  test_cycle_weight.py  test_disturbance_rejection.py  test_energy.py  test_events.py  test_health.py  test_heater_controller.py  test_heating_rate_learner.py  (+71 more)
tests/managers/: test_heat_pipeline.py  test_pwm_controller.py
