[tool.semantic_release]
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "custom_components/adaptive_climate/manifest.json:version"
]
tag_format = "v{version}"
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.changelog]
changelog_file = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project]
name = "adaptive-climate"
version = "0.63.1"
description = "Home Assistant custom component for PID-based thermostat control with adaptive learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = [".worktrees", "tests"]
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false

[tool.pyright.defineConstant]
TYPE_CHECKING = true
