[tool.semantic_release]
major_on_zero = false
version_toml = ["pyproject.toml:project.version"]
version_variables = [
    "custom_components/adaptive_climate/manifest.json:version"
]
tag_format = "v{version}"
branch = "main"
commit_message = "chore(release): {version}"
build_command = ""

[tool.semantic_release.changelog]
changelog_file = ""

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "docs", "style", "refactor", "perf", "test", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[project]
name = "adaptive-climate"
version = "0.63.3"
description = "Home Assistant custom component for PID-based thermostat control with adaptive learning"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120
exclude = [".worktrees"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "N", "RUF"]
ignore = [
    "RUF003",   # ambiguous-unicode-character-comment (degree symbols °C)
    "RUF002",   # ambiguous-unicode-character-docstring (degree symbols °C)
    "RUF001",   # ambiguous-unicode-character-string (degree symbols °C)
    "UP017",    # datetime-timezone-utc (tests run on Python 3.9)
    "UP035",    # deprecated-import (tests run on Python 3.9)
    "SIM105",   # suppressible-exception (contextlib.suppress less readable)
    "I001",     # unsorted-imports (try/except HA compat blocks break on reorder)
    "F401",     # unused-import (re-exports + try/except HA compat patterns)
    "F811",     # redefined-while-unused (try/except fallback patterns)
    "E402",     # module-import-not-at-top (conftest mock setup requires this)
    "N806",     # non-lowercase-variable-in-function (constants in functions)
    "SIM102",   # collapsible-if (nested ifs often clearer)
    "SIM108",   # if-else-block-instead-of-if-exp (readability preference)
    "B905",     # zip-without-explicit-strict (strict= requires Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N802", "N803", "N806", "F841", "E402", "RUF059", "F401", "F811", "B007", "B024", "E731", "B905", "B011"]
"custom_components/**/managers/__init__.py" = ["F401"]
"custom_components/**/adaptive/__init__.py" = ["F401"]
"custom_components/**/sensors/__init__.py" = ["F401"]
"custom_components/**/services/__init__.py" = ["F401"]
"custom_components/**/helpers/__init__.py" = ["F401"]
"tests/conftest.py" = ["E402", "F811"]
"custom_components/**/const.py" = ["UP036", "UP042", "N805"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
exclude = [".worktrees", "tests"]
# Missing HA type stubs
reportMissingTypeStubs = false
reportMissingImports = false
# Unknown types from HA framework
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownParameterType = false
reportMissingParameterType = false
# Internal architecture uses private member access across tightly-coupled classes
reportPrivateUsage = false
# HA patterns: optional state access, dynamic attributes
reportOptionalMemberAccess = false
reportAttributeAccessIssue = false
reportOptionalOperand = false
reportOptionalCall = false
# HA callback decorator is untyped
reportUntypedFunctionDecorator = false
reportUntypedBaseClass = false
# Try/except fallback patterns redefine constants
reportConstantRedefinition = false
# HA uses dynamic type patterns
reportInvalidTypeForm = false
reportGeneralTypeIssues = false
# Lambda types in HA patterns
reportUnknownLambdaType = false
# Unused imports handled by ruff
reportUnusedImport = false
# Generic type args (dict vs dict[str, Any]) - cosmetic
reportMissingTypeArgument = false
# Possibly unbound in try/except fallback patterns
reportPossiblyUnboundVariable = false
# Type narrowing issues with HA's dynamic types
reportArgumentType = false
reportOperatorIssue = false
reportIndexIssue = false
reportCallIssue = false
reportReturnType = false
reportAssignmentType = false
# Unnecessary checks that are intentional guards
reportUnnecessaryComparison = false
reportUnnecessaryIsInstance = false
reportRedeclaration = false
reportUnusedFunction = false

[tool.pyright.defineConstant]
TYPE_CHECKING = true
